--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.2.9",
     "morgan": "^1.9.0",
@@ -15,7 +16,9 @@
     "passport-jwt": "^4.0.0",
     "react": "^16.4.2",
     "react-bootstrap": "^0.32.3",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.2",
+    "react-fontawesome": "^1.6.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "serve-favicon": "^2.5.0"
